--- a/BioCro/DARPA/temp_exps_biomass.Rmd
+++ b/BioCro/DARPA/temp_exps_biomass.Rmd
@@ -279,6 +279,64 @@ ggplot(data = daily_biomass) +
   theme(legend.position = "bottom")
 ```
 
+Sensitivity analysis and variance decomposition plots for high night temperature results. 
+```{r}
+sa_dfs <- data.frame()
+for(run in 1:3){
+  load(paste0("temp_exps_results/temp_exps_results", run, "/sensitivity.results.NOENSEMBLEID.TotLivBiom.2019.2019.Rdata"))
+  sa_df1 <- sensitivity.results[["SetariaWT_ME034"]]$variance.decomposition.output
+  sa_df2 <- data.frame(trait = names(sa_df1$coef.vars), 
+                             data.frame(sa_df1))
+  sa_df3 <- sa_df2 %>% 
+    mutate(trait.labels = factor(as.character(PEcAn.utils::trait.lookup(trait)$figid)), 
+         
+           units = PEcAn.utils::trait.lookup(trait)$units, 
+           coef.vars = coef.vars * 100, 
+           sd = sqrt(variances), 
+           run = run)
+  rm(sensitivity.results)
+  sa_dfs <- bind_rows(sa_dfs, sa_df3)
+}
+sa_dfs$run <- as.factor(sa_dfs$run)
+
+fontsize = list(title = 18, axis = 14)
+theme_set(theme_minimal() + 
+            theme(axis.text.x = 
+                    element_text(
+                      size = fontsize$axis, 
+                                 vjust = -1), 
+                  axis.text.y = element_blank(),
+                  axis.ticks = element_blank(), 
+                  axis.line = element_blank(), 
+                  axis.title.x = element_blank(), 
+                  axis.title.y = element_blank(), 
+                  panel.grid.minor = element_blank(), 
+                  panel.border = element_blank()))
+
+cv <- ggplot(data = sa_dfs) +
+  geom_pointrange(aes(x = trait.labels, y = coef.vars, ymin = 0, ymax = coef.vars, color = run), alpha = 0.5, size = 1.25, position = position_dodge(width = c(-0.4))) +
+  coord_flip() +
+  ggtitle("CV %") +
+  geom_hline(aes(yintercept = 0), size = 0.1) +
+  theme(axis.text.y = element_text(color = 'black', hjust = 1, size = fontsize$axis))
+
+el <- ggplot(data = sa_dfs) +
+  geom_pointrange(aes(x = trait.labels, y = elasticities, ymin = 0, ymax = elasticities, color = run), alpha = 0.5, size = 1.25, position = position_dodge(width = c(-0.4))) +
+  coord_flip() +
+  ggtitle("Elasticity") +
+  geom_hline(aes(yintercept = 0), size = 0.1) +
+  theme(plot.title = element_text(hjust = 0.5))
+
+vd <- ggplot(data = sa_dfs) +
+  geom_pointrange(aes(x = trait.labels, y = sd, ymin = 0, ymax = sd, color = run), alpha = 0.5, size = 1.25, position = position_dodge(width = c(-0.4))) +
+  coord_flip() +
+  ggtitle("Variance Explained (SD Units)") +
+  geom_hline(aes(yintercept = 0), size = 0.1)
+
+gridExtra::grid.arrange(cv, el, vd, ncol = 3)
+```
+
+
 # Section 5: Plot Three Runs
 
 Code to plot the biomass estimates from the first two runs together, along with the control data. 
