--- a/BioCro/DARPA/temp_exps_biomass.Rmd
+++ b/BioCro/DARPA/temp_exps_biomass.Rmd
@@ -71,7 +71,8 @@ control_biomass <- read_excel(data_path, sheets_names[7]) %>%
   mutate(days_grown = as.integer(as.Date(as.character(biomass.harvested), format = "%Y-%m-%d") - 
                                    as.integer(as.Date(as.character(treatment.started), format = "%Y-%m-%d"))), 
          total_biomass_mg = panicle_DW_mg + stem_DW_mg + leaf_DW_mg + roots_DW_mg, 
-         total_biomass_Mgha = ud.convert(total_biomass_mg, "mg", "Mg") / area_ha) %>% 
+         total_biomass_Mgha = ud.convert(total_biomass_mg, "mg", "Mg") / area_ha, 
+         total_biomass_kgm2 = ud.convert(total_biomass_Mgha, "Mg/ha", "kg/m2")) %>% 
   filter(!is.na(total_biomass_Mgha))
 write.csv(control_biomass, "temp_exps_inputs1/control_biomass_meas.csv")
 
@@ -81,6 +82,7 @@ timescale <- data.table(day = rep(biocro_result$doy, each = 24), hour = 0:23)
 rm(biocro_result)
 
 load("temp_exps_results/temp_exps_results1/ensemble.ts.NOENSEMBLEID.TotLivBiom.2019.2019.Rdata")
+convert_biomass <- function(x) ud.convert(x, "Mg/ha", "kg/m2")
 daily_biomass <- data.frame(timescale, t(ensemble.ts[["TotLivBiom"]])) %>% 
   gather(ensemble, biomass, X1:X10) %>% 
   group_by(day, hour) %>% 
@@ -94,7 +96,8 @@ daily_biomass <- data.frame(timescale, t(ensemble.ts[["TotLivBiom"]])) %>%
             median = sum(median), 
             sd = sqrt(sum(sd^2)), 
             lcl = sum(lcl), 
-            ucl = sum(ucl))
+            ucl = sum(ucl)) %>% 
+  mutate_at(vars(mean:ucl), convert_biomass)
 write.csv(daily_biomass, "temp_exps_inputs1/biomass_ests1.csv")
 rm(ensemble.ts)
 
@@ -104,9 +107,9 @@ ggplot(data = daily_biomass) +
   geom_line(aes(day, y = mean)) +
   geom_ribbon(aes(day, ymin = mean - sd_scale * sd, ymax = mean + sd_scale * sd), alpha = 0.1) +
   geom_ribbon(aes(day, ymin = lcl, ymax = ucl), alpha = 0.1) +
-  #geom_point(data = control_biomass, aes(x = days_grown, y = total_biomass_Mgha)) +
+  #geom_point(data = control_biomass, aes(x = days_grown, y = total_biomass_kgm2)) +
   xlab("Day of Year") + 
-  ylab("Total Biomass Mg/ha") +
+  ylab("Total Biomass (kg/m2)") +
   theme_classic()
 ```
 
@@ -146,6 +149,7 @@ timescale <- data.table(day = rep(biocro_result$doy, each = 24), hour = 0:23)
 rm(biocro_result)
 
 load("temp_exps_results/temp_exps_results2/ensemble.ts.NOENSEMBLEID.TotLivBiom.2019.2019.Rdata")
+convert_biomass <- function(x) ud.convert(x, "Mg/ha", "kg/m2")
 daily_biomass <- data.frame(timescale, t(ensemble.ts[["TotLivBiom"]])) %>% 
   gather(ensemble, biomass, X1:X10) %>% 
   group_by(day, hour) %>% 
@@ -159,7 +163,8 @@ daily_biomass <- data.frame(timescale, t(ensemble.ts[["TotLivBiom"]])) %>%
             median = sum(median), 
             sd = sqrt(sum(sd^2)), 
             lcl = sum(lcl), 
-            ucl = sum(ucl))
+            ucl = sum(ucl)) %>% 
+  mutate_at(vars(mean:ucl), convert_biomass)
 write.csv(daily_biomass, "temp_exps_inputs2/biomass_ests2.csv")
 rm(ensemble.ts)
 
@@ -170,7 +175,7 @@ ggplot(data = daily_biomass) +
   geom_ribbon(aes(day, ymin = mean - sd_scale * sd, ymax = mean + sd_scale * sd), alpha = 0.1) +
   geom_ribbon(aes(day, ymin = lcl, ymax = ucl), alpha = 0.1) +
   xlab("Day of Year") + 
-  ylab("Total Biomass Mg/ha") +
+  ylab("Total Biomass (kg/m2)") +
   theme_classic()
 ```
 
@@ -281,23 +286,16 @@ ggplot(data = daily_biomass) +
 
 Sensitivity analysis and variance decomposition plots for high night temperature results. 
 ```{r}
-sa_dfs <- data.frame()
-for(run in 1:3){
-  load(paste0("temp_exps_results/temp_exps_results", run, "/sensitivity.results.NOENSEMBLEID.TotLivBiom.2019.2019.Rdata"))
-  sa_df1 <- sensitivity.results[["SetariaWT_ME034"]]$variance.decomposition.output
-  sa_df2 <- data.frame(trait = names(sa_df1$coef.vars), 
-                             data.frame(sa_df1))
-  sa_df3 <- sa_df2 %>% 
-    mutate(trait.labels = factor(as.character(PEcAn.utils::trait.lookup(trait)$figid)), 
-         
+load("temp_exps_results/temp_exps_results1/sensitivity.results.NOENSEMBLEID.TotLivBiom.2019.2019.Rdata")
+
+sa_df1 <- sensitivity.results[["SetariaWT_ME034"]]$variance.decomposition.output
+sa_df2 <- data.frame(trait = names(sa_df1$coef.vars), data.frame(sa_df1))
+sa_df3 <- sa_df2 %>% 
+    mutate(trait.labels = factor(as.character(PEcAn.utils::trait.lookup(trait)$figid)),
            units = PEcAn.utils::trait.lookup(trait)$units, 
            coef.vars = coef.vars * 100, 
-           sd = sqrt(variances), 
-           run = run)
-  rm(sensitivity.results)
-  sa_dfs <- bind_rows(sa_dfs, sa_df3)
-}
-sa_dfs$run <- as.factor(sa_dfs$run)
+           sd = sqrt(variances))
+rm(sensitivity.results)
 
 fontsize = list(title = 18, axis = 14)
 theme_set(theme_minimal() + 
@@ -313,29 +311,28 @@ theme_set(theme_minimal() +
                   panel.grid.minor = element_blank(), 
                   panel.border = element_blank()))
 
-cv <- ggplot(data = sa_dfs) +
-  geom_pointrange(aes(x = trait.labels, y = coef.vars, ymin = 0, ymax = coef.vars, color = run), alpha = 0.5, size = 1.25, position = position_dodge(width = c(-0.4))) +
+cv <- ggplot(data = sa_df3) +
+  geom_pointrange(aes(x = trait.labels, y = coef.vars, ymin = 0, ymax = coef.vars), alpha = 0.5, size = 1.25, position = position_dodge(width = c(-0.4))) +
   coord_flip() +
   ggtitle("CV %") +
   geom_hline(aes(yintercept = 0), size = 0.1) +
   theme(axis.text.y = element_text(color = 'black', hjust = 1, size = fontsize$axis))
 
-el <- ggplot(data = sa_dfs) +
-  geom_pointrange(aes(x = trait.labels, y = elasticities, ymin = 0, ymax = elasticities, color = run), alpha = 0.5, size = 1.25, position = position_dodge(width = c(-0.4))) +
+el <- ggplot(data = sa_df3) +
+  geom_pointrange(aes(x = trait.labels, y = elasticities, ymin = 0, ymax = elasticities), alpha = 0.5, size = 1.25, position = position_dodge(width = c(-0.4))) +
   coord_flip() +
   ggtitle("Elasticity") +
   geom_hline(aes(yintercept = 0), size = 0.1) +
   theme(plot.title = element_text(hjust = 0.5))
 
-vd <- ggplot(data = sa_dfs) +
-  geom_pointrange(aes(x = trait.labels, y = sd, ymin = 0, ymax = sd, color = run), alpha = 0.5, size = 1.25, position = position_dodge(width = c(-0.4))) +
+vd <- ggplot(data = sa_df3) +
+  geom_pointrange(aes(x = trait.labels, y = sd, ymin = 0, ymax = sd), alpha = 0.5, size = 1.25, position = position_dodge(width = c(-0.4))) +
   coord_flip() +
   ggtitle("Variance Explained (SD Units)") +
   geom_hline(aes(yintercept = 0), size = 0.1)
 
 gridExtra::grid.arrange(cv, el, vd, ncol = 3)
 ```
-
 
 # Section 5: Plot Three Runs
 
@@ -345,10 +342,10 @@ Code to plot the biomass estimates from the first two runs together, along with 
 # Read in and combine biomass measurements data
 biomass_meas_control <- read.csv("temp_exps_inputs1/control_biomass_meas.csv") %>% 
   mutate(txt = "control") %>% 
-  select(days_grown, total_biomass_Mgha, txt)
+  select(days_grown, total_biomass_kgm2, txt)
 biomass_meas_highnight <- read.csv("temp_exps_inputs3/highnight_biomass_meas.csv") %>% 
   mutate(txt = "highnight") %>% 
-  select(days_grown, total_biomass_Mgha, txt)
+  select(days_grown, total_biomass_kgm2, txt)
 
 biomass_meas <- bind_rows(biomass_meas_control, biomass_meas_highnight)
 
@@ -371,7 +368,7 @@ ggplot(data = biomass_ests) +
   scale_color_manual(values=c("red", "black", "blue")) +
   xlim(x = c(0, 60)) +
   xlab("Day of Year") + 
-  ylab("Total Biomass Mg/ha") +
+  ylab("Total Biomass (kg/m2)") +
   theme_classic()
 
 ggplot(data = biomass_ests) +
@@ -380,16 +377,16 @@ ggplot(data = biomass_ests) +
   scale_color_manual(values=c("red", "black", "blue", "red", "black", "blue")) +
   xlim(x = c(0, 60)) +
   xlab("Day of Year") + 
-  ylab("Total Biomass Mg/ha") +
+  ylab("Total Biomass (kg/m2)") +
   theme_classic()
 
 ggplot(data = biomass_ests) +
   geom_line(aes(day, mean, color = run)) +
-  geom_point(data = biomass_meas, aes(x = days_grown, y = total_biomass_Mgha, color = txt)) +
+  geom_point(data = biomass_meas, aes(x = days_grown, y = total_biomass_kgm2, color = txt)) +
   scale_color_manual(values=c("red", "black", "blue", "red", "blue")) +
   xlim(x = c(0, 60)) +
   xlab("Day of Year") + 
-  ylab("Total Biomass Mg/ha") +
+  ylab("Total Biomass (kg/m2)") +
   theme_classic()
 ```
 
