Calculate transpiration and plot daily and hourly

--- a/BioCro/DARPA/temp_exps_biomass.Rmd
+++ b/BioCro/DARPA/temp_exps_biomass.Rmd
@@ -284,6 +284,87 @@ ggplot(data = daily_biomass) +
   theme(legend.position = "bottom")
 ```
 
+Plot transpiration results.
+
+```{r}
+# Clean up biomass estimates
+load('temp_exps_results/temp_exps_results3/out/SA-median/biocro_output.RData')
+timescale <- data.table(day = rep(biocro_result$doy, each = 24), hour = 0:23)
+rm(biocro_result)
+
+load("temp_exps_results/temp_exps_results3/ensemble.ts.NOENSEMBLEID.TVeg.2019.2019.Rdata")
+convert_transp <- function(x) ud.convert(x, "kg/m2/s", "kg/m2/h")
+hourly_transp <- data.frame(timescale, t(ensemble.ts[["TVeg"]])) %>% 
+  gather(ensemble, transpiration, X1:X10) %>% 
+  group_by(day, hour) %>% 
+  summarise(mean = mean(transpiration, na.rm = TRUE), 
+            sd = sd(transpiration, na.rm = TRUE)) %>%
+  mutate_at(vars(mean:sd), convert_transp) %>% 
+  mutate(date = as.Date(day, origin = "2019-04-11"), 
+         date_hour = lubridate::ymd_h(paste(date, hour)))
+
+daily_transp <- data.frame(timescale, t(ensemble.ts[["TVeg"]])) %>% 
+  gather(ensemble, transpiration, X1:X10) %>% 
+  group_by(day, hour) %>% 
+  summarise(mean = mean(transpiration, na.rm = TRUE), 
+            median = median(transpiration, na.rm = TRUE), 
+            sd = sd(transpiration, na.rm = TRUE), 
+            lcl = quantile(transpiration, probs = c(0.025), na.rm = TRUE), 
+            ucl = quantile(transpiration, probs = c(0.975), na.rm = TRUE)) %>% 
+  group_by(day) %>% 
+  summarise(mean = sum(mean), 
+            median = sum(median), 
+            sd = sqrt(sum(sd^2)), 
+            lcl = sum(lcl), 
+            ucl = sum(ucl)) %>%
+  mutate_at(vars(mean:ucl), convert_transp)
+#write.csv(daily_transpiration, "temp_exps_inputs3/transpiration_ests3.csv")
+rm(ensemble.ts)
+
+# Plot transpiration estimates
+ggplot(data = hourly_transp) + 
+  geom_line(aes(x = date_hour, y = mean, color = "darkred"))+
+  geom_ribbon(aes(x = date_hour, ymin = mean - 1 * sd, ymax = mean + 1 * sd, 
+                  fill = "darkred"), alpha = 0.1) +
+  geom_ribbon(aes(x = date_hour, ymin = mean - 2 * sd, ymax = mean + 2 * sd, 
+                  fill = "red"), alpha = 0.1) +
+  scale_color_identity(name = "", 
+                       breaks = "darkred", 
+                       labels = "Modeled", 
+                       guide = "legend") +
+  scale_fill_identity(name = "", 
+                    breaks = c("darkred", "red"), 
+                    labels = c("Mean +/- 1 standard deviation", "Mean +/- 2 standard deviations"), 
+                    guide = "legend") +
+  #xlim(x = c("2019-05-06 00:00:00", "2019-05-13 00:00:00")) +
+  scale_x_datetime(limits = lubridate::ymd_hms(c("2019-05-06 00:00:00", "2019-05-10 00:00:00"))) +
+  xlab("Date") + 
+  ylab("Transpiration (kg/m2/h)") +
+  theme_classic() +
+  theme(legend.position = "bottom")
+
+ggplot(data = daily_transp) + 
+  geom_line(aes(day, y = mean, color = "darkred")) +
+  geom_ribbon(aes(day, ymin = mean - 1 * sd, ymax = mean + 1 * sd, 
+                  fill = "darkred"), alpha = 0.1) +
+  geom_ribbon(aes(day, ymin = mean - 2 * sd, ymax = mean + 2 * sd, 
+                  fill = "red"), alpha = 0.1) +
+  scale_color_identity(name = "", 
+                       breaks = "darkred", 
+                       labels = "Modeled", 
+                       guide = "legend") +
+  scale_fill_identity(name = "", 
+                    breaks = c("darkred", "red"), 
+                    labels = c("Mean +/- 1 standard deviation", "Mean +/- 2 standard deviations"), 
+                    guide = "legend") +
+  xlim(x = c(0, 50)) +
+  xlab("Day of Experiment") + 
+  ylab("Transpiration (kg/m2/h)") +
+  theme_classic() +
+  theme(legend.position = "bottom")
+```
+
+
 Sensitivity analysis and variance decomposition plots for high night temperature results. 
 ```{r}
 load("temp_exps_results/temp_exps_results1/sensitivity.results.NOENSEMBLEID.TotLivBiom.2019.2019.Rdata")
