--- a/BioCro/DARPA/high_light.Rmd
+++ b/BioCro/DARPA/high_light.Rmd
@@ -77,12 +77,195 @@ if (!file.exists("high_light_inputs/biomass.csv")) {
            Grain = panicle_Mgha) %>% 
     mutate(Stem = Stem + Grain, 
            Grain = rep(0, nrow(.)), 
-           Rhizome = rep(0, nrow(.)))
+           Rhizome = rep(0, nrow(.))) %>% 
+    group_by(ThermalT) %>% 
+    summarise_all(mean)
   write.csv(biomass, "high_light_inputs/biomass.csv", row.names = FALSE)
 }
 
 biomass <- read.csv("high_light_inputs/biomass.csv")
 ```
+
+#### Optimize biomass coefficients
+
+config.xml has mean parameter values from database for high light treatment for SLA, Vcmax, leaf respiration rate, and stomatal slope; set tp values to equal increments up until last two which use thermal times from data
+
+```{r}
+library(BioCro)
+
+config <- PEcAn.BIOCRO::read.biocro.config("high_light_inputs/config.xml")
+l2n <- function(x) lapply(x, as.numeric)
+
+opfn <- function(optimizingParms, thermaltimeParms, rhizomeParms){ 
+  optimizingParms[1:3] <- optimizingParms[1:3]/sum(optimizingParms[1:3])
+  optimizingParms[4:6] <- optimizingParms[4:6]/sum(optimizingParms[4:6])
+  optimizingParms[7:9] <- optimizingParms[7:9]/sum(optimizingParms[7:9])
+  optimizingParms[10:12] <- optimizingParms[10:12]/sum(optimizingParms[10:12])
+  optimizingParms[13:15] <- optimizingParms[13:15]/sum(optimizingParms[13:15])
+  optimizingParms[16:19] <- optimizingParms[16:19]/sum(optimizingParms[16:19])
+  params_list <- phenoParms(tp1 = thermaltimeParms[1], 
+                           tp2 = thermaltimeParms[2], 
+                           tp3 = thermaltimeParms[3], 
+                           tp4 = thermaltimeParms[4], 
+                           tp5 = thermaltimeParms[5], 
+                           tp6 = thermaltimeParms[6], 
+                           kStem1 = optimizingParms[1], 
+                           kStem2 = optimizingParms[4], 
+                           kStem3 = optimizingParms[7], 
+                           kStem4 = optimizingParms[10], 
+                           kStem5 = optimizingParms[13], 
+                           kStem6 = optimizingParms[16], 
+                           kLeaf1 = optimizingParms[2], 
+                           kLeaf2 = optimizingParms[5], 
+                           kLeaf3 = optimizingParms[8], 
+                           kLeaf4 = optimizingParms[11], 
+                           kLeaf5 = optimizingParms[14], 
+                           kLeaf6 = optimizingParms[17], 
+                           kRoot1 = optimizingParms[3], 
+                           kRoot2 = optimizingParms[6], 
+                           kRoot3 = optimizingParms[9], 
+                           kRoot4 = optimizingParms[12], 
+                           kRoot5 = optimizingParms[15], 
+                           kRoot6 = optimizingParms[18], 
+                           kRhizome1 = rhizomeParms[1], 
+                           kRhizome2 = rhizomeParms[2], 
+                           kRhizome3 = rhizomeParms[3], 
+                           kRhizome4 = rhizomeParms[4], 
+                           kRhizome5 = rhizomeParms[5], 
+                           kRhizome6 = rhizomeParms[6], 
+                           kGrain6 = optimizingParms[19])
+  
+  t <- BioCro::BioGro(
+    WetDat = weather,
+    day1 = 1,
+    dayn = 70,
+    iRhizome = 0.001, 
+    iLeaf = 0.001, 
+    iStem = 0.001, 
+    iRoot = 0.001, 
+    soilControl = l2n(config$pft$soilControl),
+    canopyControl = l2n(config$pft$canopyControl),
+    phenoControl = l2n(params_list),
+    seneControl = l2n(config$pft$seneControl),
+    photoControl = l2n(config$pft$photoParms))
+
+  tt <- data.frame(ThermalT = t$ThermalT, 
+                   Stem = t$Stem,
+                   Leaf = t$Leaf,
+                   Root = t$Root,
+                   Rhizome = t$Rhizome,
+                   Grain = t$Grain)
+  ttt <- tt %>% 
+    slice(as.numeric(match(round(biomass$ThermalT), round(tt$ThermalT))))
+  bio_ests <- select(ttt, -ThermalT)
+  bio_meas <- select(biomass, -ThermalT)
+  diff <- abs(bio_ests - bio_meas)
+  
+  return(sum(diff))
+}
+
+optimizingParms_check <- c(rep(c(0.2, 0.3, 0.5), 6), 0)
+thermaltimeParms_check <- c(config$pft$phenoParms$tp1, config$pft$phenoParms$tp2,
+                      config$pft$phenoParms$tp3, config$pft$phenoParms$tp4,
+                      config$pft$phenoParms$tp5, config$pft$phenoParms$tp6)
+rhizomeParms_check <- rep(0, 6)
+opfn(optimizingParms_check, thermaltimeParms_check, rhizomeParms_check)
+```
+
+```{r}
+library(DEoptim)
+
+thermaltimevals <- c(config$pft$phenoParms$tp1, config$pft$phenoParms$tp2, 
+                     config$pft$phenoParms$tp3, config$pft$phenoParms$tp4, 
+                     config$pft$phenoParms$tp5, config$pft$phenoParms$tp6)
+rhizomevals <- rep(0, 6)
+
+opt_results <- DEoptim(fn = opfn, lower = c(rep(0, 2), rep(0.6, 4), 0.3, 0.1, rep(0, 11)), upper = c(rep(1, 8), rep(0.1, 4), rep(1, 7)), thermaltimeParms = thermaltimevals, rhizomeParms = rhizomevals, control = DEoptim.control(itermax = 5))
+```
+
+```{r}
+library(ggplot2)
+
+parms_results <- as.vector(opt_results$optim$bestmem)
+parms_results[1:3] <- parms_results[1:3]/sum(parms_results[1:3])
+parms_results[4:6] <- parms_results[4:6]/sum(parms_results[4:6])
+parms_results[7:9] <- parms_results[7:9]/sum(parms_results[7:9])
+parms_results[10:12] <- parms_results[10:12]/sum(parms_results[10:12])
+parms_results[13:15] <- parms_results[13:15]/sum(parms_results[13:15])
+parms_results[16:19] <- parms_results[16:19]/sum(parms_results[16:19])
+optimalParms <- phenoParms(tp1 = thermaltimevals[1], 
+                                 tp2 = thermaltimevals[2], 
+                                 tp3 = thermaltimevals[3], 
+                                 tp4 = thermaltimevals[4], 
+                                 tp5 = thermaltimevals[5], 
+                                 tp6 = thermaltimevals[6], 
+                                 kStem1 = parms_results[1], 
+                                 kStem2 = parms_results[4], 
+                                 kStem3 = parms_results[7], 
+                                 kStem4 = parms_results[10], 
+                                 kStem5 = parms_results[13], 
+                                 kStem6 = parms_results[16], 
+                                 kLeaf1 = parms_results[2], 
+                                 kLeaf2 = parms_results[5], 
+                                 kLeaf3 = parms_results[8], 
+                                 kLeaf4 = parms_results[11], 
+                                 kLeaf5 = parms_results[14], 
+                                 kLeaf6 = parms_results[17], 
+                                 kRoot1 = parms_results[3], 
+                                 kRoot2 = parms_results[6], 
+                                 kRoot3 = parms_results[9], 
+                                 kRoot4 = parms_results[12], 
+                                 kRoot5 = parms_results[15], 
+                                 kRoot6 = parms_results[18], 
+                                 kRhizome1 = rhizomevals[1], 
+                                 kRhizome2 = rhizomevals[2], 
+                                 kRhizome3 = rhizomevals[3], 
+                                 kRhizome4 = rhizomevals[4], 
+                                 kRhizome5 = rhizomevals[5], 
+                                 kRhizome6 = rhizomevals[6], 
+                                 kGrain6 = parms_results[19])
+
+results_test <- BioCro::BioGro(
+    WetDat = weather,
+    day1 = 1,
+    dayn = 70,
+    iRhizome = 0.001, 
+    iLeaf = 0.001, 
+    iStem = 0.001, 
+    iRoot = 0.001, 
+    soilControl = l2n(config$pft$soilControl),
+    canopyControl = l2n(config$pft$canopyControl),
+    phenoControl = l2n(optimalParms),
+    seneControl = l2n(config$pft$seneControl),
+    photoControl = l2n(config$pft$photoParms))
+
+results_test2 <- data.frame(ThermalT = results_test$ThermalT, 
+                 Stem = results_test$Stem,
+                 Leaf = results_test$Leaf,
+                 Root = results_test$Root,
+                 Rhizome = results_test$Rhizome,
+                 Grain = results_test$Grain)
+results_test3 <- results_test2 %>% 
+  slice(as.numeric(match(round(biomass$ThermalT), round(results_test2$ThermalT))))
+diff <- sum(abs(results_test3 - biomass))
+
+biomass_meas_plot <- biomass %>% 
+  tidyr::gather(plant_part, mass, Stem:Rhizome) %>% 
+  mutate(data = "measurements")
+biomass_ests_plot <- results_test2 %>% 
+  tidyr::gather(plant_part, mass, Stem:Grain) %>% 
+  mutate(data = "estimates")
+biomass_plot <- bind_rows(biomass_meas_plot, biomass_ests_plot)
+
+ggplot() +
+  geom_point(filter(biomass_plot, data == "measurements"), mapping = aes(x = ThermalT, y = mass, color = plant_part)) +
+  geom_line(filter(biomass_plot, data == "estimates"), mapping = aes(x = ThermalT, y = mass, color = plant_part)) +
+  xlim(c(0, 1800)) +
+  labs(x = "Thermal Time", y = "Biomass (Ma/ha)", color = "Plant Part") +
+  theme_classic() +
+  facet_wrap(~plant_part)
+```
+
 
 ### Compare BioCro biomass estimates with measurements
 
